--- a/style/main.css
+++ b/style/main.css
@@ -3,3 +3,44 @@ body*{
     padding:0;
     box-sizing: border-box;
 }
+
+.container *{
+    padding: 0.5em;
+}
+
+.container{
+    display:flex;
+    flex-wrap: wrap;
+}
+
+.Menu{
+    flex-basis: 100%;
+    display: flex;
+    flex-wrap:wrap ;
+}
+
+main{
+    display: flex;
+    flex-wrap: wrap;
+    flex-basis: 60%;
+}
+
+main>h2{
+    flex-basis: 100%;
+}
+
+form{
+    flex-basis: 50%;
+}
+
+img{
+    flex-basis:40%;
+}
+
+aside{
+flex-basis: 30%;
+}
+
+footer{
+    flex-basis: 100%;
+}
