--- a/style/main.css
+++ b/style/main.css
@@ -33,6 +33,11 @@ form{
     flex-basis: 50%;
 }
 
+form>fieldset>:nth-of-type(1){
+    display:flex;
+    flex-wrap: wrap;
+}
+
 img{
     flex-basis:40%;
 }
