--- a/style/main.css
+++ b/style/main.css
@@ -14,6 +14,9 @@ body*{
 }
 
 .Menu{
+    border-top: 1px hsl(240, 50%, 50%) solid;
+    border-bottom: 1px hsl(240, 50%, 50%) solid;
+    margin:2%;
     flex-basis: 100%;
     display: flex;
     flex-wrap:wrap ;
@@ -23,6 +26,8 @@ main{
     display: flex;
     flex-wrap: wrap;
     flex-basis: 60%;
+    background-color:hsl(240, 50%, 90%)
+    
 }
 
 main>h2{
@@ -43,9 +48,24 @@ img{
 }
 
 aside{
-flex-basis: 30%;
+    height:600px;
+    display: flex;
+    flex-basis: 30%;
+    background-color:hsl(240, 50%, 90%);
+    margin-left: 5%;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+aside>article{
+    
 }
 
 footer{
+    display: flex;
     flex-basis: 100%;
+    border: 1px hsl(240, 50%, 50%) solid;
+    margin:2%;
+    align-items: center;
+    justify-content: center;
 }
