--- a/style/main.css
+++ b/style/main.css
@@ -4,22 +4,86 @@ body*{
     box-sizing: border-box;
 }
 
-.container *{
-    padding: 0.5em;
-}
-
 .container{
     display:flex;
     flex-wrap: wrap;
+    width: 1000px;
+    justify-content: center;
+    margin:0 auto;
+    font-family: Arial;
 }
 
 .Menu{
     border-top: 1px hsl(240, 50%, 50%) solid;
     border-bottom: 1px hsl(240, 50%, 50%) solid;
-    margin:2%;
+    margin-top:1em;
+    margin-bottom:1em;
     flex-basis: 100%;
     display: flex;
-    flex-wrap:wrap ;
+    flex-wrap:wrap;
+    height: 100px;
+    align-items: center;
+    
+}
+
+header{
+    flex-basis: 60%;
+    display: flex;
+    justify-content: center;
+    text-transform: capitalize;
+    word-spacing: 0.3em;
+}
+
+.blysk{
+    font-size: 1.3em;
+    margin-left: 0.3em;
+    letter-spacing: 0.7em;
+}
+
+header>h1{
+    color:hsl(240, 50%, 50%);
+    display: flex;
+    align-items: center;
+}
+
+ul{
+    list-style-type: none;
+    display: flex;
+    flex-basis: 30%;
+}
+
+ul>li>a{
+    width: 8em;
+    padding:0.8em;
+    border-radius: 0.8em;
+    display: flex;
+    justify-content: center;
+    margin:0.8em;
+}
+
+ul>li>a{
+    text-decoration: none;
+}
+
+
+ul>li:nth-of-type(1)>a{
+    background: hsl(240, 50%, 90%);
+    color:hsl(240, 50%, 50%);
+}
+
+ul>li:nth-of-type(2)>a{
+    background: hsl(240, 50%, 50%);
+    color: hsl(240, 50%, 90%);
+}
+
+ul>li:nth-of-type(1)>a:hover{
+    background: hsl(240, 50%, 50%);
+    color: hsl(240, 50%, 90%);
+}
+
+ul>li:nth-of-type(2)>a:hover{
+    background: hsl(240, 50%, 90%);
+    color:hsl(240, 50%, 50%);
 }
 
 main{
@@ -32,6 +96,8 @@ main{
 
 main>h2{
     flex-basis: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 form{
@@ -68,4 +134,8 @@ footer{
     margin:2%;
     align-items: center;
     justify-content: center;
+}
+
+.Imie{
+    color:hsl(0, 100%, 50%);
 }
