--- a/style/main.css
+++ b/style/main.css
@@ -90,8 +90,11 @@ main{
     display: flex;
     flex-wrap: wrap;
     flex-basis: 60%;
-    background-color:hsl(240, 50%, 90%)
-    
+    background-color:hsl(240, 50%, 90%);
+    padding: 1em;
+    border-radius: 1em;
+    box-shadow: 0 0 5px hsl(240, 50%, 50%);
+    height: 500px;
 }
 
 main>h2{
@@ -101,26 +104,60 @@ main>h2{
 }
 
 form{
-    flex-basis: 50%;
+    flex-basis: 55%;
 }
 
-form>fieldset>:nth-of-type(1){
-    display:flex;
-    flex-wrap: wrap;
+fieldset{
+    margin:0.5em;
+    margin-bottom: 0.3em;
 }
 
 img{
-    flex-basis:40%;
+    margin-top:15%;
+    width: 250px;
+    height:167px;
+}
+
+.b1{
+    padding: 0.5em;
+    width: 6em;
+}
+
+.b2{
+    padding: 0.5em;
+    width: 6em;
+}
+
+.usluga{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.Karta{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.sm{
+    flex-basis: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 aside{
-    height:600px;
+    height:500px;
     display: flex;
     flex-basis: 30%;
     background-color:hsl(240, 50%, 90%);
-    margin-left: 5%;
     justify-content: center;
     flex-wrap: wrap;
+    padding: 1em;
+    border-radius: 1em;
+    box-shadow: 0 0 5px hsl(240, 50%, 50%);
+    margin-left:3%;
 }
 
 aside>article{
