--- a/style/main.css
+++ b/style/main.css
@@ -145,6 +145,8 @@ img{
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 1.5em;
+    color:hsl(0, 100%, 50%);
 }
 
 aside{
@@ -152,16 +154,24 @@ aside{
     display: flex;
     flex-basis: 30%;
     background-color:hsl(240, 50%, 90%);
-    justify-content: center;
     flex-wrap: wrap;
     padding: 1em;
     border-radius: 1em;
     box-shadow: 0 0 5px hsl(240, 50%, 50%);
     margin-left:3%;
+    flex-direction: column;
+}
+aside>h2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 aside>article{
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.1em;
 }
 
 footer{
