--- a/style/main.css
+++ b/style/main.css
@@ -13,7 +13,7 @@ body*{
     font-family: Arial;
 }
 
-.Menu{
+nav{
     border-top: 1px hsl(240, 50%, 50%) solid;
     border-bottom: 1px hsl(240, 50%, 50%) solid;
     margin-top:1em;
@@ -38,12 +38,14 @@ header{
     font-size: 1.3em;
     margin-left: 0.3em;
     letter-spacing: 0.7em;
+    text-transform: uppercase;
 }
 
 header>h1{
     color:hsl(240, 50%, 50%);
     display: flex;
     align-items: center;
+    font-variant: small-caps;
 }
 
 ul{
@@ -52,7 +54,7 @@ ul{
     flex-basis: 30%;
 }
 
-ul>li>a{
+nav>ul>li>a{
     width: 8em;
     padding:0.8em;
     border-radius: 0.8em;
@@ -61,29 +63,24 @@ ul>li>a{
     margin:0.8em;
 }
 
-ul>li>a{
+nav>ul>li>a{
     text-decoration: none;
 }
 
 
-ul>li:nth-of-type(1)>a{
+nav>ul>li>a{
     background: hsl(240, 50%, 90%);
     color:hsl(240, 50%, 50%);
 }
 
-ul>li:nth-of-type(2)>a{
+nav>ul>li>a:hover{
     background: hsl(240, 50%, 50%);
     color: hsl(240, 50%, 90%);
 }
 
-ul>li:nth-of-type(1)>a:hover{
+nav>ul>li>a.active{
     background: hsl(240, 50%, 50%);
     color: hsl(240, 50%, 90%);
-}
-
-ul>li:nth-of-type(2)>a:hover{
-    background: hsl(240, 50%, 90%);
-    color:hsl(240, 50%, 50%);
 }
 
 main{
@@ -95,6 +92,7 @@ main{
     border-radius: 1em;
     box-shadow: 0 0 5px hsl(240, 50%, 50%);
     height: 500px;
+    justify-content: space-between;
 }
 
 main>h2{
@@ -117,10 +115,9 @@ fieldset{
 }
 
 img{
-    margin-top:15%;
+    margin-top: 15%;
     width: 250px;
     height:167px;
-    margin-left:3%;
 }
 
 .b1{
@@ -150,9 +147,7 @@ img{
     flex-basis: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
-    font-size: 1.5em;
-    color:hsl(0, 100%, 50%);
+    justify-content: center; 
 }
 
 aside{
